# procuresignal

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.api  Dockerfile.worker  LICENSE  PHASE_4_COMPLETE_GUIDE.md  PRD_PROCURESIGNAL.md  README.md  TRD_PROCURESIGNAL.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: task-1-report.md  task-2-report.md  task-3-evidence.txt  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md  task-7-report.md
api/: article_entities.py  dependencies.py  main.py  scheduler.py  translation.py
api/routers/: __init__.py  articles.py  chat.py  currency.py  feed.py  health.py  preferences.py  risk_events.py  signals.py
api/schemas/: __init__.py  article.py  chat.py  currency.py  feed.py  preference.py  risk_event.py
docker/postgres-init/: 01-trust-host-auth.sh  02-set-password.sql
docs/: interview-preparation.md
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/__tests__/: api.test.ts  app-shell.test.tsx  article-card.test.tsx  article-detail-view.test.tsx  chat-view.test.tsx  chat-window.test.tsx  chatReducer.test.ts  currency-view.test.tsx  feed-view.test.tsx  header.test.tsx  preference-form.test.tsx  risk-events-view.test.tsx  signal-badge.test.tsx  smoke.test.tsx  useApi.test.tsx  user-store.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-shell.tsx  article-card.tsx  (+10 more)
migrations/: env.py
postman/: ProcureSignal-Local.postman_collection.json
scripts/: bootstrap_pipeline.py  seed_personas.py  smoke_test.py
tests/: conftest.py
worker/: celery_config.py  main.py  signal_tasks.py  tasks.py
(+166 files in other folders)
