[tool.poetry]
name = "procuresignal"
version = "0.1.0"
description = "AI-powered procurement intelligence agent"
authors = ["nitishkpandey <pandeyknitish@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "procuresignal", from = "shared" },
    { include = "api", from = "api" },
    { include = "worker", from = "worker" },
]

[tool.poetry.dependencies]
python = "^3.11"
# Core
pydantic = "^2.0"
pydantic-settings = "^2.0"
sqlalchemy = "^2.0"
asyncpg = "^0.28"
alembic = "^1.13"
aiosqlite = "^0.19"

# API
fastapi = "^0.104"
uvicorn = "^0.24"
httpx = "^0.25"

# Worker
celery = "^5.3"
redis = "^5.0"

# Data processing
feedparser = "^6.0"
langdetect = "^1.0"
spacy = "^3.7"

# Enrichment
tenacity = "^8.2"

# Logging
structlog = "^23.2"
python-json-logger = "^2.0"

# Testing
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
factory-boy = "^3.3"

# Code quality
ruff = "^0.1"
black = "^23.12"
mypy = "^1.7"
bandit = "^1.7"
pre-commit = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
namespace_packages = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/shared"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=api --cov=worker --cov=shared --cov-report=html"
